# amp-academy

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md
.claude/: settings.json
scripts/: CREDENTIALS.md  (+6 more)
tutor-amp-theme/: SETUP.md  THEME_DEVELOPER_GUIDE.md  deploy-local.sh  pyproject.toml
tutor-amp-theme/brand/: .gitignore  package-lock.json  package.json  preview.html
tutor-amp-theme/brand/paragon/: _overrides.scss  _variables.scss  core.scss  fonts.scss
tutor-amp-theme/brand/paragon/tokens/core/: color.json
tutor-amp-theme/brand/paragon/tokens/themes/light/: color.json
tutor-amp-theme/tutoramptheme/: __init__.py
tutor-amp-theme/tutoramptheme/templates/amp-theme/lms/static/images/: README.md
tutor-amp-theme/tutoramptheme/templates/amp-theme/lms/templates/: footer.html  index_overlay.html
tutor-amp-theme/tutoramptheme/templates/amp-theme/lms/templates/dashboard/: _dashboard_course_listing.html
tutor-amp-theme/tutoramptheme/templates/amp-theme/lms/templates/header/: header.html  navbar-authenticated.html  navbar-logo-header.html  navbar-not-authenticated.html  user_dropdown.html
tutor-amp-theme/tutoramptheme/templates/amp-theme/lms/templates/learner_dashboard/: _dashboard_navigation_courses.html
tutor-contrib-pwa/: README.md  pyproject.toml
tutor-contrib-pwa/pwa_notifications/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
tutor-contrib-pwa/pwa_notifications/management/commands/: sync_pwa_notification_types.py
tutor-contrib-pwa/pwa_notifications/migrations/: 0001_initial.py  0002_pwaconfig.py
tutor-contrib-pwa/tutorpwa/: __init__.py  hooks.py  notifications.py  plugin.py
tutor-contrib-pwa/tutorpwa/templates/pwa/: manifest.json  offline.html  sw.js
tutor-course-purchasing/: pyproject.toml
tutor-course-purchasing/purchasing/: access.py  admin.py  apps.py  enrollment.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py  views_api.py
tutor-course-purchasing/purchasing/migrations/: 0001_initial.py
tutor-course-purchasing/purchasing/processors/: base.py  stub.py
tutor-course-purchasing/purchasing/templates/purchasing/: base.html  cart.html  catalog.html  checkout.html  confirmation.html  orders.html
tutor-course-purchasing/tutorcoursepurchasing/: __init__.py
tutor-student-sponsorship/: DEPLOYMENT.md  pyproject.toml
tutor-student-sponsorship/student_sponsorship/: access.py  admin.py  apps.py  emails.py  forms.py  models.py  progress.py  signals.py  tasks.py  urls.py  views.py
tutor-student-sponsorship/student_sponsorship/management/commands/: expire_sponsorships.py
tutor-student-sponsorship/student_sponsorship/migrations/: 0001_initial.py  0002_institutioncourseaccess_subsidy_pct.py
tutor-student-sponsorship/student_sponsorship/static/student_sponsorship/: sponsorship.css
tutor-student-sponsorship/student_sponsorship/templates/student_sponsorship/: accept_invitation.html  base.html  claim_sponsorship.html  course_add.html  course_edit.html  course_remove_confirm.html  institution_courses.html  portal_home.html  student_add.html  student_detail.html  student_edit.html  student_list.html  student_remove_confirm.html  teacher_add.html  teacher_assign.html  teacher_list.html
tutor-student-sponsorship/tutorstudensponsorship/: __init__.py
(+35 files in other folders)
