[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-amp-theme"
version = "0.1.0"
dependencies = ["tutor>=15.0.0"]

[project.entry-points."tutor.plugin.v1"]
amp-theme = "tutoramptheme"

[tool.setuptools.packages.find]
include = ["tutoramptheme*"]

[tool.setuptools.package-data]
tutoramptheme = ["templates/**/*"]
